<resources>
    <string name="app_name"></string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="asetukset">Asetukset</string>
    <string name="omat_reseptit">Omat reseptit</string>
    <string name="resepti_ehdotus">Resepti ehdotus</string>
    <string name="new_recipe_button">New Recipe Button</string>
    <string name="recipe_category">Recipe Category</string>
    <string name="favorite">Favorite</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="title_activity_recipe_details">RecipeDetailsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
</resources>